--- a/templates/base.html
+++ b/templates/base.html
@@ -96,8 +96,8 @@
     <footer class="footer mt-auto py-3">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
-                    <p class="m-0 text-center">
+                <div class="col-sm d-none d-md-block">
+                    <p class="mt-2 text-center">
                         {% block copyright %}
                         Created by Ben Fashan
                         {% endblock copyright %}
