--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
         content="Rate, Work, Projects, Creative Projects, Feedback, Community, Showcase, Portfolio,
         Art, Design, Photography, Writing, Crafts, DIY, Construction, Collaboration, Innovation, Excellence, Creativity, Review, Second Opinion," />
-    <meta name="author" content="Iris Smok" />
+    <meta name="author" content="Ben Fashan" />
     <title>Rate The Work - {% block title %}{% endblock %}</title>
 
     <!--GOOGLE FONTS-->
