--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!--STYLES-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 </head>
 
 <body>
@@ -59,7 +59,7 @@
                                 href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if url_name == 'recipes' %}active{% endif %}" href="#">Posts</a>
+                            <a class="nav-link {% if url_name == 'posts' %}active{% endif %}" href="#">Posts</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class=" nav-item">
@@ -132,6 +132,9 @@
 
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-x0Km6V0a+7skBx0pESfKTaSAnzZ5E3IhHUfKWR3uAfCIIhr3D8jFo+fFbcCjHKVf" crossorigin="anonymous">
     </script>
 </body>
 
