--- a/templates/base.html
+++ b/templates/base.html
@@ -121,9 +121,9 @@
                 </div>
                 <div class="col-sm">
                     <p class="m-sm text-center">
-                        <a href="#" class="text-decoration-none">About us</a>
+                        <a href="#" class="footer-links text-decoration-none">About us</a>
                         <br>
-                        <a href="#" class="text-decoration-none">Contact us</a>
+                        <a href="#" class="footer-links text-decoration-none">Contact us</a>
                     </p>
                 </div>
             </div>
