--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,12 +6,14 @@
 {% block content %}
 <section class="container text-center">
     <h1 class="mt-3">Rate The Work</h1>
-    <form class="d-flex mt-5" role="search" method="GET" action="#">
+    <form class="d-flex mt-5 h-100 " role="search" method="GET" action="#">
         <input class="form-control me-2" name="Q" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
     <div class="home-bio">
-        <p>Welcome to "Rate the Work," a platform where individuals and companies alike can showcase their projects and
+        <p>Welcome to <span class="home-bio-title">Rate the Work</span> a platform where individuals and companies alike
+            can showcase their
+            projects and
             receive valuable feedback. Whether you're a company looking to display your portfolio or an individual
             seeking a
             second opinion on works completed for you, the Rate The Work community is here to assist you.
