--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -1,2 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}Posts{% endblock %}
+
+{% block content %}
+<section class="text-center">
+    <h1 class="p-2">Posts</h1>
+    <a href="#" class="btn btn-primary ">Create Post</a>
+    <div class="container d-flex flex-row flex-wrap justify-content-center">
+        {% for w in work %}
+        <a href="#" class="work" aria-label="Click to view {{ w.title }}">
+            <div class="card m-3" style="width: 18rem;">
+                <img src="{{ w.work_image.url }}" class="card-img-top" alt="{{ w.title }}">
+                <div class="card-body">
+                    <h2 class="card-title">{{ w.title }}</h2>
+                    <p class="card-text">{{ w.content|truncatechars:100 }}</p>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
+</section>
+{% endblock %}
