--- a/templates/base.html
+++ b/templates/base.html
@@ -56,10 +56,11 @@
                     <ul class="navbar-nav me-auto mb-2">
                         <li class="nav-item">
                             <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page"
-                                href="#">Home</a>
+                                href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if url_name == 'posts' %}active{% endif %}" href="#">Posts</a>
+                            <a class="nav-link {% if url_name == 'post' %}active{% endif %}"
+                                href="{% url 'post' %}">Posts</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class=" nav-item">
