FIX: formatting on post page cards

--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -14,8 +14,14 @@
                 <img src="{{ w.work_image.url }}" class="card-img-top" alt="{{ w.title }}">
                 <div class="card-body">
                     <h2 class="card-title">{{ w.title }}</h2>
-                    <span>{{ w.likes }}</span>
-                    <p class="card-text">{{ w.content|truncatechars:100 }}</p>
+                    <div>
+                        {% for category in w.categories.all %}
+                        <p class="text-decoration-none"><strong>Category:</strong> {{ category.name }}
+                        </p>
+                        {% endfor %}
+                    </div>
+                    <p><strong>Likes:</strong> {{ w.likes.all.count }}</p>
+                    <p class="card-text"><strong>Description:</strong> {{ w.content|truncatechars:100 }}</p>
                 </div>
             </div>
         </a>
