--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,9 @@
         <input class="form-control me-2" name="Q" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
-    <div class="home-bio">
-        <p>Welcome to <span class="home-bio-title">Rate the Work</span> a platform where individuals and companies alike
+    <div class="home-info">
+        <p>Welcome to <span class="home-info-title">Rate the Work</span> a platform where individuals and companies
+            alike
             can showcase their
             projects and
             receive valuable feedback. Whether you're a company looking to display your portfolio or an individual
