ADD: comment displayfor auth

--- a/blog/templates/blog/work_details.html
+++ b/blog/templates/blog/work_details.html
@@ -4,7 +4,7 @@
 {% block title %}Work Detail - {{ work.title }}{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
-
+<!-- image area -->
 <div class="container">
     <div class="row">
         <div class="col-md-6">
@@ -16,13 +16,14 @@
                     <hr>
                     {% if request.user == work.user %}
                     <div class="text-center">
-                        <a href="#" class="btn btn-primary">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
+                        <a href="#" id="btn-post-edit" class="btn btn-primary">Edit</a>
+                        <a href="#" id="btn-post-delete" class="btn btn-danger">Delete</a>
                     </div>
                     {% endif %}
                 </div>
             </div>
         </div>
+        <!-- description area -->
         <div class="col-md-6">
             <div class="card mb-4 mt-3">
                 <div class="card-body">
@@ -43,14 +44,15 @@
 
         </div>
     </div>
-
+    <!-- comment area -->
     <div class="row">
         <div class="col-md-8">
             <div class="card mb-4 mt-3">
                 <h3 class="card-header">Comments</h3>
                 <div class="card-body">
                     {% for rating in ratings %}
-                    <div class="rating" style="padding: 10px;">
+                    <div class="rating {% if not rating.approved and rating.user == user %}
+                    faded{% elif not rating.approved %}d-none{% endif %}">
                         <p class="font-weight-bold">{{ rating.user }}</p>
                         <p class="text-muted">{{ rating.created_on }}</p>
                         <p>{{ rating.content | linebreaks }}</p>
@@ -59,27 +61,29 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="card mb-4 mt-3">
-                <div class="card-body">
-                    {% if commented %}
-                    <div class="alert alert-success" role="alert">
-                        Your rating is awaiting approval
-                    </div>
-                    {% else %}
-                    {% if user.is_authenticated %}
-                    <h3 class="card-title">Leave A Comment</h3>
-                    <p class="card-text">Posting as: {{ user.username }}</p>
-                    <form method="post" style="margin-top: 1.3em;">
-                        {% csrf_token %}
-                        {{ rating_form | crispy }}
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                    {% endif %}
-                    {% endif %}
+    </div>
+    <!-- leave comment area -->
+    <div class="col-md-4">
+        <div class="card mb-4 mt-3">
+            <div class="card-body">
+                {% if commented %}
+                <div class="alert alert-success" role="alert">
+                    Your rating is awaiting approval
                 </div>
+                {% else %}
+                {% if user.is_authenticated %}
+                <h3 class="card-title">Leave A Comment</h3>
+                <p class="card-text">Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    {% csrf_token %}
+                    {{ rating_form | crispy }}
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
