--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Posts{% endblock %}
+{% block title %}Work{% endblock %}
 
 {% block content %}
 <section class="text-center">
-    <h1 class="p-2">Posts</h1>
-    <a href="#" class="btn btn-primary ">Create Post</a>
+    <h1 class="p-2">Work</h1>
+    <a href="#" class="btn btn-primary ">Create Work</a>
     <div class="container d-flex flex-row flex-wrap justify-content-center">
         {% for w in work %}
         <a href="{% url 'work_detail' pk=w.pk %}" class="work" aria-label="Click to view {{ w.title }}">
