--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Rate The Work | Perfect place to share works created for or by yourself" />
+    <meta name="description" content="Rate The Work | Place to share works created for or by yourself" />
     <meta name="keywords"
         content="Rate, Work, Projects, Creative Projects, Feedback, Community, Showcase, Portfolio,
         Art, Design, Photography, Writing, Crafts, DIY, Construction, Collaboration, Innovation, Excellence, Creativity, Review, Second Opinion," />
@@ -59,8 +59,8 @@
                                 href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if url_name == 'post' %}active{% endif %}"
-                                href="{% url 'post' %}">Posts</a>
+                            <a class="nav-link {% if url_name == 'work' %}active{% endif %}"
+                                href="{% url 'work' %}">Work</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class=" nav-item">
