--- a/blog/templates/blog/work_create.html
+++ b/blog/templates/blog/work_create.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Edit Work{% endblock %}
+{% block title %}Create Work{% endblock %}
 
 {% block content %}
 {% load crispy_forms_tags %}
 {% load cloudinary %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data" class="p-2 form">
-        <h1 class="text-center">Edit Work</h1>
+        <h1 class="text-center">Create Work</h1>
         {% csrf_token %}
         {{ form.media }}
-        {{ form|crispy }}
+        {{ work_form|crispy }}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-2">Edit Work</button>
+            <button type="submit" class="btn btn-primary mt-2" value="Save">Submit Work</button>
         </div>
     </form>
 </div>
