--- a/blog/templates/blog/work_edit.html
+++ b/blog/templates/blog/work_edit.html
@@ -10,9 +10,9 @@
         <h1 class="text-center">Edit Work</h1>
         {% csrf_token %}
         {{ form.media }}
-        {{ form|crispy }}
+        {{ work_form|crispy }}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-2">Edit Work</button>
+            <button type="submit" class="btn btn-primary mt-2" value="Save">Edit Work</button>
         </div>
     </form>
 </div>
