--- a/blog/templates/blog/work_edit.html
+++ b/blog/templates/blog/work_edit.html
@@ -12,7 +12,7 @@
         {{ form.media }}
         {{ work_form|crispy }}
         <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-2" value="Save">Edit Work</button>
+            <button type="submit" class="btn btn-primary mt-2" value="Save">Click here</button>
         </div>
     </form>
 </div>
