ADD: more content to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,6 +32,13 @@
             us on this journey as we work together to elevate the quality of workmanship and creativity across all
             industries.
         </p>
+        <p>
+            We encourage users to suggest a price they would pay for the work they are rating.
+            For added engagement, we've included the option for users to select a negative price if they believe the
+            work
+            warrants a refund or if they consider it to be of exceptionally poor quality.
+            Please provide justification for your pricing suggestion along with your comment.
+        </p>
     </div>
 </section>
 {% endblock %}
