--- a/blog/templates/blog/work.html
+++ b/blog/templates/blog/work.html
@@ -28,5 +28,19 @@
         </a>
         {% endfor %}
     </div>
+    <!-- create new pages with paginate and page_obj -->
+    {% if work.has_other_pages %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if work.has_previous %}
+            <li class="page-item"><a href="?page={{ work.previous_page_number }}" class="page-link">&laquo; Previous</a>
+            </li>
+            {% endif %}
+            {% if work.has_next %}
+            <li class="page-item"><a href="?page={{ work.next_page_number }}" class="page-link">Next &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 {% endblock %}
