--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section class="container text-center">
     <h1 class="mt-3">Rate The Work</h1>
-    <form class="d-flex mt-5 h-100 " role="search" method="GET" action="#">
+    <form class="d-flex mt-5 h-100 " role="search" method="GET" action="{% url 'home' %}">
         <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
@@ -40,5 +40,30 @@
             Please provide justification for your pricing suggestion along with your comment.
         </p>
     </div>
+
+    <!-- Display search results -->
+    {% if query %}
+    <h2>Search Results:</h2>
+    <div class="container d-flex flex-row flex-wrap justify-content-center">
+        {% for work in object_list %}
+        <a href="{% url 'work_detail' pk=work.pk %}" class="work" aria-label="Click to view {{ work.title }}">
+            <div class="card m-3" style="width: 18rem;">
+                <img src="{{ work.work_image.url }}" class="card-img-top img-fluid " alt="{{ work.title }}">
+                <div class="card-body">
+                    <h2 class="card-title">{{ work.title }}</h2>
+                    <div>
+                        {% for category in work.categories.all %}
+                        <p>{{ category.name }}</p>
+                        {% endfor %}
+                    </div>
+                    <p><i class="fa-regular fa-thumbs-up"></i>{{ work.likes.all.count }}</p>
+                    <p>{{ work.content|truncatechars:100 }}</p>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
+    {% endif %}
+
 </section>
 {% endblock %}
