--- a/blog/templates/blog/work.html
+++ b/blog/templates/blog/work.html
@@ -7,9 +7,9 @@
 <div class="text-center">
     <h1 class="p-2">Work</h1>
     {% if user.is_authenticated %}
-    <a href="{% url 'new_work' %}" class="btn btn-primary ">Create Work</a>
+    <a href="{% url 'new_work' %}" class="btn btn-primary mt-2">Create Work</a>
     {% endif %}
-    <div class="container d-flex flex-row flex-wrap justify-content-center">
+    <div class="container d-flex flex-row flex-wrap justify-content-center mt-5">
         {% for w in work %}
         <a href="{% url 'work_detail' pk=w.pk %}" class="work" aria-label="Click to view {{ w.title }}">
             <div class="card m-3" style="width: 18rem;">
@@ -22,7 +22,7 @@
                         {% endfor %}
                     </div>
                     <p><i class="fa-regular fa-thumbs-up"></i>{{ w.likes.all.count }}</p>
-                    <p>{{ w.content|truncatechars:100 }}</p>
+                    <p class="card-content">{{ w.content|truncatechars:100 }}</p>
                 </div>
             </div>
         </a>
