--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,28 @@ img.logo {
     font-family: var(--title);
 }
 
+/* work display cards*/
+
+.card {
+    max-width: 17rem;
+    height: 30rem;
+    margin: 1rem;
+    /* Adjust margin for spacing between cards */
+}
+
+.card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-body {
+    overflow: hidden;
+}
+
+.card-content {
+    text-align: left;
+}
 
 /* work_detail.html */
 
