ADD: profile page and stylin

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,8 @@
         <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
     </form>
-    <div class="home-info">
-        <p>Welcome to <span class="home-info-title">Rate the Work</span> a platform where individuals and companies
+    <div class="page-intro">
+        <p>Welcome to <span class="home-intro-title">Rate the Work</span> a platform where individuals and companies
             alike
             can showcase their
             projects and
