--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,8 @@
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class=" nav-item">
-                            <a class="nav-link {% if url_name == 'profile' %}active{% endif %}" href="#">Profile</a>
+                            <a class="nav-link {% if url_name == 'profile' %}active{% endif %}"
+                                href="{% url 'profile' %}">Profile</a>
                         </li>
                         <li class=" nav-item">
                             <a class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
