--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row justify-content-between text-center">
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-primary mt-2">Profile Picture</a>
+                    <a href="{% url 'upload_profile_pic' %}" class="btn btn-primary mt-2">Profile Picture</a>
                 </div>
                 <div class="col-12 col-md-6">
                     <a href="#" class="btn btn-primary mt-2">Your Likes</a>
