ADD:profile pic displayng both placeholder and user upload.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,12 @@ img.logo {
     border-radius: 50%;
 }
 
+.profile-img {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 5px;
+}
+
 /* form */
 
 .form {
