--- a/user_dashboard/templates/user_dashboard/profile.html
+++ b/user_dashboard/templates/user_dashboard/profile.html
@@ -36,7 +36,7 @@
 
             <div class="row justify-content-between m-3 text-center">
                 <div class="col-12 col-md-6">
-                    <a href="#" class="btn btn-primary mt-2">Your Comments</a>
+                    <a href="{% url 'profile_comments' %}" class=" btn btn-primary mt-2">Your Comments</a>
                 </div>
                 <div class="col-12 col-md-6">
                     <a href="#" class="btn btn-primary mt-2">Contact Admin</a>
